--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -6,20 +6,17 @@
 
 window#waybar {
     border-bottom: 0 solid #ffffff;
-    background: transparent;
+    background: #0f1117;
     transition-property: background-color;
     transition-duration: 0.5s;
 }
 
 #workspaces {
-    background: #24283b;
-    margin: 10px 20px 0;
+    margin: 0px 20px 0;
     padding: 3px;
-    border-radius: 10px;
     font-size: 14px;
     color: #FFF;
     opacity: 0.8;
-    border: 2px solid #3d59a1;
 }
 
 #workspaces button {
@@ -34,8 +31,7 @@ window#waybar {
 
 #workspaces button.active {
     color: #FFF;
-    background: #3d59a1;
-    border-radius: 5px;
+    background: #d88c5a;
     padding: 0 15px;
     transition: all 0.1s ease-in-out;
     opacity: 1;
@@ -49,33 +45,23 @@ window#waybar {
 }
 
 #window {
-    background: #24283b;
-    margin: 10px 0 0;
     padding: 3px 8px;
-    border-radius: 10px;
     color: #FFF;
     font-size: 14px;
     opacity: 0.8;
-    border: 2px solid #3d59a1;
 }
 
 .modules-right {
-    background: #24283b;
-    margin: 10px 20px 0;
+    margin: 0px 20px 0;
     padding: 5px 2px;
-    border: 2px solid #3d59a1;
-    border-radius: 10px;
 }
 
 #idle_inhibitor {
     font-size: 16px;
     font-weight: bold;
-    background: #3d59a1;
     padding: 2px 10px;
     opacity: 0.8;
     color: #FFF;
-    border: 2px solid #3d59a1;
-    border-radius: 10px;
 }
 
 #idle_inhibitor.activated {
@@ -87,42 +73,31 @@ window#waybar {
 
 #pulseaudio {
     font-size: 16px;
-    background: #9ece6a;
     padding: 2px 10px;
     opacity: 0.8;
     color: #FFF;
-    border: 2px solid #9ece6a;
-    border-radius: 10px;
 }
 
 #network {
     font-size: 16px;
-    background: #bb9af7;
     padding: 2px 10px;
     opacity: 0.8;
     color: #FFF;
-    border: 2px solid #bb9af7;
-    border-radius: 10px;
 }
 
 #cpu,
 #memory {
     font-size: 16px;
-    background: #e0af68;
     padding: 2px 10px;
     opacity: 0.8;
     color: #FFF;
-    border: 2px solid #e0af68;
-    border-radius: 10px;
 }
 
 #custom-power {
-    font-size: 16px;
-    background: #f7768e;
+    font-size: 17px;
+    font-weight: bold;
     padding: 2px 10px;
     opacity: 0.8;
     color: #FFF;
-    border: 2px solid #f7768e;
-    border-radius: 10px;
 }
 
