--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -7,8 +7,11 @@
 window#waybar {
     border-bottom: 0 solid #ffffff;
     background: #0f1117;
+    opacity: 0.8;
     transition-property: background-color;
     transition-duration: 0.5s;
+    border-radius: 10px;
+    border: 2px solid #e39564;
 }
 
 #workspaces {
