--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,48 +1,48 @@
+* {
+    all: unset;
+    font-family: "FiraCode Nerd Font", monospace;
+}
+
 window {
-    margin: 0px;
-    background-color: #24283b;
-    font-family: monospace;
-    font-size: 12px;
+    padding: 20px;
+    background-color: #1d130e;
+    border: 2px solid #cc7722;
 }
 
 #input {
-    margin: 5px;
-    border: 1px solid #414868;
-    color: #c0caf5;
-    background-color: #1a1b26;
-    border-radius: 3px;
-}
-
-#input image {
-    color: #c0caf5;
+    margin-bottom: 10px;
+    padding: 8px 12px;
+    background-color: #17100b;
+    color: #ebdbb2;
+    border: 1px solid #cc7722;
+    border-radius: 4px;
 }
 
 #inner-box,
 #outer-box {
-    margin: 5px;
-    border: none;
-    background-color: #24283b;
+    background-color: #1d130e;
 }
 
-#scroll {
-    margin: 0px;
-    border: none;
-}
-
-#text {
-    margin: 5px;
-    border: none;
-    color: #c0caf5;
+#entry {
+    padding: 8px 12px;
+    margin: 4px 0;
+    color: #ebdbb2;
+    background-color: transparent;
+    border-radius: 4px;
 }
 
 #entry:selected {
-    background-color: #414868;
-    font-weight: normal;
-    border-radius: 3px;
+    background-color: #cc7722 !important;
+    color: #2c1a0f !important;
+}
+
+#text {
+    padding-left: 4px;
+    color: #ebdbb2;
 }
 
 #text:selected {
-    background-color: #414868;
-    font-weight: normal;
+    background-color: transparent !important;
+    color: #2c1a0f !important;
 }
 
